# epic_manifest_parser

./: .gitignore  Cargo.toml
src/epic_manifest_parser/: Cargo.toml
src/epic_manifest_parser/src/: auth.rs  chunk.rs  ext.rs  http.rs  lib.rs  manifest.rs  spool.rs
src/epic_manifest_parser_test/: Cargo.toml
src/epic_manifest_parser_test/src/: main.rs
