[package]
name = "epic_manifest_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
serde_urlencoded = "0.7.1"
serde_json = "1.0.79"
base64 = "0.13.0"
bytes = "1.1.0"
byteorder = "1.4.3"
miniz_oxide = "0.5.1"
lazy_static = "1.4.0"
flate2 = "1.0.22"
bitflags = "1.3.2"
http = "0.2.6"
string-builder = "0.2.0"
hex = "0.4.3"
futures = "0.3.21"

hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5.0"